	cmake_minimum_required(VERSION 3.10)
	project(nbody-n-16-g-1 VERSION 1.0.0 LANGUAGES CXX)
	
	# required macros
	SET( CMAKE_CXX_FLAGS_DEV "-g -O0 -Minfo=accel" CACHE STRING "Flags used by the C++ compiler during DEV builds." FORCE )
	SET( CMAKE_CXX_FLAGS_TEST "-gopt -fast -ta:tesla:cc60,pinned -O4 -Minfo=accel" CACHE STRING "Flags used by the C++ compiler during TEST builds." FORCE )
	SET( CMAKE_CXX_FLAGS_VTUNE "-gopt -fast -O4 -w" CACHE STRING "Flags used by the C++ compiler during VTUNE builds." FORCE )
	SET( CMAKE_CXX_FLAGS_NVPROF "-gopt -fast -O4 -w -Minfo=accel" CACHE STRING "Flags used by the C++ compiler during NVPROF builds." FORCE )
	SET( CMAKE_CXX_FLAGS_BENCHMARK "-fast -O4 -ta:tesla:cc60,pinned -w" CACHE STRING "Flags used by the C++ compiler during Benchmark builds." FORCE )
	SET( CMAKE_CXX_FLAGS_BENCHMARKPALMA "-fast -O4 -tp -ta:tesla:cc35,pinned -w" CACHE STRING "Flags used by the C++ compiler during Benchmark builds for Palma." FORCE )
	SET( CMAKE_CXX_FLAGS_BENCHMARKTAURUS "-fast -O4 -tp=haswell -ta=tesla:cc35,pinned -w" CACHE STRING "Flags used by the C++ compiler during Benchmark builds for Taurus." FORCE )
		
	# output path for binaries and libraries
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
	
	# packages
	find_package(MPI REQUIRED)
	
	find_package(OpenMP REQUIRED)
	
	find_package(OpenACC REQUIRED)

	
	add_executable(nbody-n-16-g-1_0 ${PROJECT_SOURCE_DIR}/src/nbody-n-16-g-1_0.cpp)
	target_compile_features(nbody-n-16-g-1_0 PRIVATE cxx_std_14)
	target_include_directories(nbody-n-16-g-1_0 PRIVATE ${PROJECT_SOURCE_DIR}/include ${MPI_CXX_INCLUDE_DIRS})
	target_compile_definitions(nbody-n-16-g-1_0 PRIVATE ${MPI_CXX_COMPILE_DEFINITIONS})
	target_compile_options(nbody-n-16-g-1_0 PRIVATE ${MPI_CXX_COMPILE_OPTIONS} ${OpenMP_CXX_FLAGS} ${OpenACC_CXX_FLAGS})
	target_link_libraries(nbody-n-16-g-1_0 PRIVATE ${MPI_CXX_LINK_FLAGS} ${MPI_CXX_LIBRARIES} ${OpenMP_CXX_FLAGS} ${OpenMP_CXX_LIBRARIES} ${OpenACC_CXX_FLAGS})
	add_executable(nbody-n-16-g-1_1 ${PROJECT_SOURCE_DIR}/src/nbody-n-16-g-1_1.cpp)
	target_compile_features(nbody-n-16-g-1_1 PRIVATE cxx_std_14)
	target_include_directories(nbody-n-16-g-1_1 PRIVATE ${PROJECT_SOURCE_DIR}/include ${MPI_CXX_INCLUDE_DIRS})
	target_compile_definitions(nbody-n-16-g-1_1 PRIVATE ${MPI_CXX_COMPILE_DEFINITIONS})
	target_compile_options(nbody-n-16-g-1_1 PRIVATE ${MPI_CXX_COMPILE_OPTIONS} ${OpenMP_CXX_FLAGS} ${OpenACC_CXX_FLAGS})
	target_link_libraries(nbody-n-16-g-1_1 PRIVATE ${MPI_CXX_LINK_FLAGS} ${MPI_CXX_LIBRARIES} ${OpenMP_CXX_FLAGS} ${OpenMP_CXX_LIBRARIES} ${OpenACC_CXX_FLAGS})
	add_executable(nbody-n-16-g-1_2 ${PROJECT_SOURCE_DIR}/src/nbody-n-16-g-1_2.cpp)
	target_compile_features(nbody-n-16-g-1_2 PRIVATE cxx_std_14)
	target_include_directories(nbody-n-16-g-1_2 PRIVATE ${PROJECT_SOURCE_DIR}/include ${MPI_CXX_INCLUDE_DIRS})
	target_compile_definitions(nbody-n-16-g-1_2 PRIVATE ${MPI_CXX_COMPILE_DEFINITIONS})
	target_compile_options(nbody-n-16-g-1_2 PRIVATE ${MPI_CXX_COMPILE_OPTIONS} ${OpenMP_CXX_FLAGS} ${OpenACC_CXX_FLAGS})
	target_link_libraries(nbody-n-16-g-1_2 PRIVATE ${MPI_CXX_LINK_FLAGS} ${MPI_CXX_LIBRARIES} ${OpenMP_CXX_FLAGS} ${OpenMP_CXX_LIBRARIES} ${OpenACC_CXX_FLAGS})
	add_executable(nbody-n-16-g-1_3 ${PROJECT_SOURCE_DIR}/src/nbody-n-16-g-1_3.cpp)
	target_compile_features(nbody-n-16-g-1_3 PRIVATE cxx_std_14)
	target_include_directories(nbody-n-16-g-1_3 PRIVATE ${PROJECT_SOURCE_DIR}/include ${MPI_CXX_INCLUDE_DIRS})
	target_compile_definitions(nbody-n-16-g-1_3 PRIVATE ${MPI_CXX_COMPILE_DEFINITIONS})
	target_compile_options(nbody-n-16-g-1_3 PRIVATE ${MPI_CXX_COMPILE_OPTIONS} ${OpenMP_CXX_FLAGS} ${OpenACC_CXX_FLAGS})
	target_link_libraries(nbody-n-16-g-1_3 PRIVATE ${MPI_CXX_LINK_FLAGS} ${MPI_CXX_LIBRARIES} ${OpenMP_CXX_FLAGS} ${OpenMP_CXX_LIBRARIES} ${OpenACC_CXX_FLAGS})
	add_executable(nbody-n-16-g-1_4 ${PROJECT_SOURCE_DIR}/src/nbody-n-16-g-1_4.cpp)
	target_compile_features(nbody-n-16-g-1_4 PRIVATE cxx_std_14)
	target_include_directories(nbody-n-16-g-1_4 PRIVATE ${PROJECT_SOURCE_DIR}/include ${MPI_CXX_INCLUDE_DIRS})
	target_compile_definitions(nbody-n-16-g-1_4 PRIVATE ${MPI_CXX_COMPILE_DEFINITIONS})
	target_compile_options(nbody-n-16-g-1_4 PRIVATE ${MPI_CXX_COMPILE_OPTIONS} ${OpenMP_CXX_FLAGS} ${OpenACC_CXX_FLAGS})
	target_link_libraries(nbody-n-16-g-1_4 PRIVATE ${MPI_CXX_LINK_FLAGS} ${MPI_CXX_LIBRARIES} ${OpenMP_CXX_FLAGS} ${OpenMP_CXX_LIBRARIES} ${OpenACC_CXX_FLAGS})
	add_executable(nbody-n-16-g-1_5 ${PROJECT_SOURCE_DIR}/src/nbody-n-16-g-1_5.cpp)
	target_compile_features(nbody-n-16-g-1_5 PRIVATE cxx_std_14)
	target_include_directories(nbody-n-16-g-1_5 PRIVATE ${PROJECT_SOURCE_DIR}/include ${MPI_CXX_INCLUDE_DIRS})
	target_compile_definitions(nbody-n-16-g-1_5 PRIVATE ${MPI_CXX_COMPILE_DEFINITIONS})
	target_compile_options(nbody-n-16-g-1_5 PRIVATE ${MPI_CXX_COMPILE_OPTIONS} ${OpenMP_CXX_FLAGS} ${OpenACC_CXX_FLAGS})
	target_link_libraries(nbody-n-16-g-1_5 PRIVATE ${MPI_CXX_LINK_FLAGS} ${MPI_CXX_LIBRARIES} ${OpenMP_CXX_FLAGS} ${OpenMP_CXX_LIBRARIES} ${OpenACC_CXX_FLAGS})
	add_executable(nbody-n-16-g-1_6 ${PROJECT_SOURCE_DIR}/src/nbody-n-16-g-1_6.cpp)
	target_compile_features(nbody-n-16-g-1_6 PRIVATE cxx_std_14)
	target_include_directories(nbody-n-16-g-1_6 PRIVATE ${PROJECT_SOURCE_DIR}/include ${MPI_CXX_INCLUDE_DIRS})
	target_compile_definitions(nbody-n-16-g-1_6 PRIVATE ${MPI_CXX_COMPILE_DEFINITIONS})
	target_compile_options(nbody-n-16-g-1_6 PRIVATE ${MPI_CXX_COMPILE_OPTIONS} ${OpenMP_CXX_FLAGS} ${OpenACC_CXX_FLAGS})
	target_link_libraries(nbody-n-16-g-1_6 PRIVATE ${MPI_CXX_LINK_FLAGS} ${MPI_CXX_LIBRARIES} ${OpenMP_CXX_FLAGS} ${OpenMP_CXX_LIBRARIES} ${OpenACC_CXX_FLAGS})
	add_executable(nbody-n-16-g-1_7 ${PROJECT_SOURCE_DIR}/src/nbody-n-16-g-1_7.cpp)
	target_compile_features(nbody-n-16-g-1_7 PRIVATE cxx_std_14)
	target_include_directories(nbody-n-16-g-1_7 PRIVATE ${PROJECT_SOURCE_DIR}/include ${MPI_CXX_INCLUDE_DIRS})
	target_compile_definitions(nbody-n-16-g-1_7 PRIVATE ${MPI_CXX_COMPILE_DEFINITIONS})
	target_compile_options(nbody-n-16-g-1_7 PRIVATE ${MPI_CXX_COMPILE_OPTIONS} ${OpenMP_CXX_FLAGS} ${OpenACC_CXX_FLAGS})
	target_link_libraries(nbody-n-16-g-1_7 PRIVATE ${MPI_CXX_LINK_FLAGS} ${MPI_CXX_LIBRARIES} ${OpenMP_CXX_FLAGS} ${OpenMP_CXX_LIBRARIES} ${OpenACC_CXX_FLAGS})
	add_executable(nbody-n-16-g-1_8 ${PROJECT_SOURCE_DIR}/src/nbody-n-16-g-1_8.cpp)
	target_compile_features(nbody-n-16-g-1_8 PRIVATE cxx_std_14)
	target_include_directories(nbody-n-16-g-1_8 PRIVATE ${PROJECT_SOURCE_DIR}/include ${MPI_CXX_INCLUDE_DIRS})
	target_compile_definitions(nbody-n-16-g-1_8 PRIVATE ${MPI_CXX_COMPILE_DEFINITIONS})
	target_compile_options(nbody-n-16-g-1_8 PRIVATE ${MPI_CXX_COMPILE_OPTIONS} ${OpenMP_CXX_FLAGS} ${OpenACC_CXX_FLAGS})
	target_link_libraries(nbody-n-16-g-1_8 PRIVATE ${MPI_CXX_LINK_FLAGS} ${MPI_CXX_LIBRARIES} ${OpenMP_CXX_FLAGS} ${OpenMP_CXX_LIBRARIES} ${OpenACC_CXX_FLAGS})
	add_executable(nbody-n-16-g-1_9 ${PROJECT_SOURCE_DIR}/src/nbody-n-16-g-1_9.cpp)
	target_compile_features(nbody-n-16-g-1_9 PRIVATE cxx_std_14)
	target_include_directories(nbody-n-16-g-1_9 PRIVATE ${PROJECT_SOURCE_DIR}/include ${MPI_CXX_INCLUDE_DIRS})
	target_compile_definitions(nbody-n-16-g-1_9 PRIVATE ${MPI_CXX_COMPILE_DEFINITIONS})
	target_compile_options(nbody-n-16-g-1_9 PRIVATE ${MPI_CXX_COMPILE_OPTIONS} ${OpenMP_CXX_FLAGS} ${OpenACC_CXX_FLAGS})
	target_link_libraries(nbody-n-16-g-1_9 PRIVATE ${MPI_CXX_LINK_FLAGS} ${MPI_CXX_LIBRARIES} ${OpenMP_CXX_FLAGS} ${OpenMP_CXX_LIBRARIES} ${OpenACC_CXX_FLAGS})
	add_executable(nbody-n-16-g-1_10 ${PROJECT_SOURCE_DIR}/src/nbody-n-16-g-1_10.cpp)
	target_compile_features(nbody-n-16-g-1_10 PRIVATE cxx_std_14)
	target_include_directories(nbody-n-16-g-1_10 PRIVATE ${PROJECT_SOURCE_DIR}/include ${MPI_CXX_INCLUDE_DIRS})
	target_compile_definitions(nbody-n-16-g-1_10 PRIVATE ${MPI_CXX_COMPILE_DEFINITIONS})
	target_compile_options(nbody-n-16-g-1_10 PRIVATE ${MPI_CXX_COMPILE_OPTIONS} ${OpenMP_CXX_FLAGS} ${OpenACC_CXX_FLAGS})
	target_link_libraries(nbody-n-16-g-1_10 PRIVATE ${MPI_CXX_LINK_FLAGS} ${MPI_CXX_LIBRARIES} ${OpenMP_CXX_FLAGS} ${OpenMP_CXX_LIBRARIES} ${OpenACC_CXX_FLAGS})
	add_executable(nbody-n-16-g-1_11 ${PROJECT_SOURCE_DIR}/src/nbody-n-16-g-1_11.cpp)
	target_compile_features(nbody-n-16-g-1_11 PRIVATE cxx_std_14)
	target_include_directories(nbody-n-16-g-1_11 PRIVATE ${PROJECT_SOURCE_DIR}/include ${MPI_CXX_INCLUDE_DIRS})
	target_compile_definitions(nbody-n-16-g-1_11 PRIVATE ${MPI_CXX_COMPILE_DEFINITIONS})
	target_compile_options(nbody-n-16-g-1_11 PRIVATE ${MPI_CXX_COMPILE_OPTIONS} ${OpenMP_CXX_FLAGS} ${OpenACC_CXX_FLAGS})
	target_link_libraries(nbody-n-16-g-1_11 PRIVATE ${MPI_CXX_LINK_FLAGS} ${MPI_CXX_LIBRARIES} ${OpenMP_CXX_FLAGS} ${OpenMP_CXX_LIBRARIES} ${OpenACC_CXX_FLAGS})
	add_executable(nbody-n-16-g-1_12 ${PROJECT_SOURCE_DIR}/src/nbody-n-16-g-1_12.cpp)
	target_compile_features(nbody-n-16-g-1_12 PRIVATE cxx_std_14)
	target_include_directories(nbody-n-16-g-1_12 PRIVATE ${PROJECT_SOURCE_DIR}/include ${MPI_CXX_INCLUDE_DIRS})
	target_compile_definitions(nbody-n-16-g-1_12 PRIVATE ${MPI_CXX_COMPILE_DEFINITIONS})
	target_compile_options(nbody-n-16-g-1_12 PRIVATE ${MPI_CXX_COMPILE_OPTIONS} ${OpenMP_CXX_FLAGS} ${OpenACC_CXX_FLAGS})
	target_link_libraries(nbody-n-16-g-1_12 PRIVATE ${MPI_CXX_LINK_FLAGS} ${MPI_CXX_LIBRARIES} ${OpenMP_CXX_FLAGS} ${OpenMP_CXX_LIBRARIES} ${OpenACC_CXX_FLAGS})
	add_executable(nbody-n-16-g-1_13 ${PROJECT_SOURCE_DIR}/src/nbody-n-16-g-1_13.cpp)
	target_compile_features(nbody-n-16-g-1_13 PRIVATE cxx_std_14)
	target_include_directories(nbody-n-16-g-1_13 PRIVATE ${PROJECT_SOURCE_DIR}/include ${MPI_CXX_INCLUDE_DIRS})
	target_compile_definitions(nbody-n-16-g-1_13 PRIVATE ${MPI_CXX_COMPILE_DEFINITIONS})
	target_compile_options(nbody-n-16-g-1_13 PRIVATE ${MPI_CXX_COMPILE_OPTIONS} ${OpenMP_CXX_FLAGS} ${OpenACC_CXX_FLAGS})
	target_link_libraries(nbody-n-16-g-1_13 PRIVATE ${MPI_CXX_LINK_FLAGS} ${MPI_CXX_LIBRARIES} ${OpenMP_CXX_FLAGS} ${OpenMP_CXX_LIBRARIES} ${OpenACC_CXX_FLAGS})
	add_executable(nbody-n-16-g-1_14 ${PROJECT_SOURCE_DIR}/src/nbody-n-16-g-1_14.cpp)
	target_compile_features(nbody-n-16-g-1_14 PRIVATE cxx_std_14)
	target_include_directories(nbody-n-16-g-1_14 PRIVATE ${PROJECT_SOURCE_DIR}/include ${MPI_CXX_INCLUDE_DIRS})
	target_compile_definitions(nbody-n-16-g-1_14 PRIVATE ${MPI_CXX_COMPILE_DEFINITIONS})
	target_compile_options(nbody-n-16-g-1_14 PRIVATE ${MPI_CXX_COMPILE_OPTIONS} ${OpenMP_CXX_FLAGS} ${OpenACC_CXX_FLAGS})
	target_link_libraries(nbody-n-16-g-1_14 PRIVATE ${MPI_CXX_LINK_FLAGS} ${MPI_CXX_LIBRARIES} ${OpenMP_CXX_FLAGS} ${OpenMP_CXX_LIBRARIES} ${OpenACC_CXX_FLAGS})
	add_executable(nbody-n-16-g-1_15 ${PROJECT_SOURCE_DIR}/src/nbody-n-16-g-1_15.cpp)
	target_compile_features(nbody-n-16-g-1_15 PRIVATE cxx_std_14)
	target_include_directories(nbody-n-16-g-1_15 PRIVATE ${PROJECT_SOURCE_DIR}/include ${MPI_CXX_INCLUDE_DIRS})
	target_compile_definitions(nbody-n-16-g-1_15 PRIVATE ${MPI_CXX_COMPILE_DEFINITIONS})
	target_compile_options(nbody-n-16-g-1_15 PRIVATE ${MPI_CXX_COMPILE_OPTIONS} ${OpenMP_CXX_FLAGS} ${OpenACC_CXX_FLAGS})
	target_link_libraries(nbody-n-16-g-1_15 PRIVATE ${MPI_CXX_LINK_FLAGS} ${MPI_CXX_LIBRARIES} ${OpenMP_CXX_FLAGS} ${OpenMP_CXX_LIBRARIES} ${OpenACC_CXX_FLAGS})
